--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,15 @@
-FROM python:3.10-alpine
+FROM python:3.10-slim
 
-WORKDIR /usr/src/app
+RUN apt-get update && apt-get install -y git
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY .env /app/.env
 
 COPY . .
-
-RUN pip install --upgrade pip && pip install -r requirements.txt
 
 CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
