--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,6 +13,9 @@ RUN npm install
 # Копируем остальные файлы
 COPY . .
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 # Собираем приложение
 RUN npm run build
 
@@ -22,8 +25,8 @@ FROM nginx:alpine
 # Копируем собранные файлы из предыдущего этапа
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Копируем кастомный конфиг nginx (если нужно)
-# COPY nginx.conf /etc/nginx/nginx.conf
+# Копируем наш конфиг nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
