fix all issues with docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,8 +5,10 @@ RUN apt-get update && apt-get install -y git
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --upgrade pip
+RUN pip3 install  numpy
+RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY .env /app/.env
 
