--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,3 @@
-torch==2.6.0+cu124
---extra-index-url https://download.pytorch.org/whl/cu124
 fastapi==0.115.12
 uvicorn==0.34.1
 python-dotenv==1.1.0
@@ -8,3 +6,4 @@ pillow==11.0.0
 accelerate==1.6.0
 python-multipart==0.0.20
 sentencepiece==0.2.0
+torch
